2026-01-27  Zhengyi Fu  <i@fuzy.me>

	Use pipes in compilation-mode

	* init.el (process-use-pipe): New function.

2026-01-27  Zhengyi Fu  <i@fuzy.me>

	* init.el: Enable envrc-global-mode.

2026-01-23  Zhengyi Fu  <i@fuzy.me>

	nixos-options: Fix compile warning

	* user-lisp/nixos-options.el (nixos-options--make-alist): Use
	`push' instead of `add-to-list'.

2026-01-23  Zhengyi Fu  <i@fuzy.me>

	Add consult-nixos

	* user-lisp/nixos-options.el:
	* user-lisp/consult-nixos.el: New files.

2026-01-23  Zhengyi Fu  <i@fuzy.me>

	* user-lisp/gptel-config.el: Add directive for generating commit messages.

2026-01-23  Zhengyi Fu  <i@fuzy.me>

	* init.el (send-password-to-process): Fix the prompt.

2026-01-22  Zhengyi Fu  <i@fuzy.me>

	* templates/bash.eld: Add new template for Bash shell scripts.

2026-01-22  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not enable `corfu-popupinfo-mode'.

2026-01-21  Zhengyi Fu  <i@fuzy.me>

	Add per-project history for project-compile

	* init.el (per-project-compile-history): New variable.
	(project-compile): New advice.

2026-01-19  Zhengyi Fu  <i@fuzy.me>

	* init.el (+gnus-read-ephemeral-public-inbox-search-group): New command.

2026-01-19  Zhengyi Fu  <i@fuzy.me>

	* transient/levels.el (magit-log): Set level of first-parent to 1.

2026-01-16  Zhengyi Fu  <i@fuzy.me>

	* user-lisp/gptel-config.el (+gptel-language-tutor-primary-selection): New command.

2026-01-15  Zhengyi Fu  <i@fuzy.me>

	* user-lisp/tui.el (tui-recentf): Filter out remote files.

2026-01-14  Zhengyi Fu  <i@fuzy.me>

	* init.el: Remove some packages (pulsar, corfu-terminal, lin, logos).

2026-01-14  Zhengyi Fu  <i@fuzy.me>

	* init.el: Add `dotemacs-theme-refresh' to `emacs-startup-hook'.

2026-01-14  Zhengyi Fu  <i@fuzy.me>

	Fix consult configuration error

	* init.el: Change consult--source-recent-file to
	consult-source-recent-file.

2026-01-14  Zhengyi Fu  <i@fuzy.me>

	Remove some unneeded autoloads.
